No longer apply Bug and Feature Request directly
This way they can be auto-closed if stale.

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -3,7 +3,7 @@ description: >
   Did you discover a bug in SABnzbd? Report it here!
   If you are not 100% certain this is a bug please go to our forums, Reddit or Discord server first.
 labels:
-  - Bug
+  - Support
 body:
   - type: input
     attributes:
