--- a/requirements.txt
+++ b/requirements.txt
@@ -30,18 +30,18 @@ babelfish==0.6.1
 rebulk==3.2.0
 
 # New for starlette/uvicorn
-starlette==0.41.3
-anyio==4.6.2.post1
+starlette==0.47.3
+anyio==4.10.0
 sniffio==1.3.1
-uvicorn==0.32.1
+uvicorn==0.35.0
 click==8.1.7
-h11==0.14.0
-python-multipart==0.0.19
+h11==0.16.0
+python-multipart==0.0.20
 httptools==0.6.4
 
 # Recent cryptography versions require Rust. If you run into issues compiling this
 # SABnzbd will also work with older pre-Rust versions such as cryptography==3.3.2
-cryptography==44.0.0
+cryptography==45.0.6
 
 # We recommend using "orjson" as it is 2x as fast as "ujson". However, it requires
 # Rust so SABnzbd works just as well with "ujson" or the Python built in "json" module
@@ -59,8 +59,8 @@ winrt-Windows.UI.Notifications==3.2.1; sys_platform == 'win32'
 typing_extensions==4.14.1; sys_platform == 'win32'
 
 # macOS system calls
-pyobjc-core==10.3.2; sys_platform == 'darwin'
-pyobjc-framework-Cocoa==10.3.2; sys_platform == 'darwin'
+pyobjc-core==11.1; sys_platform == 'darwin'
+pyobjc-framework-Cocoa==11.1; sys_platform == 'darwin'
 
 # Linux notifications
 notify2==0.3.1; sys_platform != 'win32' and sys_platform != 'darwin'
@@ -75,9 +75,9 @@ paho-mqtt==1.6.1 # Pinned, newer versions don't work with AppRise yet
 # Requests Requirements
 charset_normalizer==3.4.3
 idna==3.10
-urllib3==2.2.3
-certifi==2024.8.30
-oauthlib==3.2.2
+urllib3==2.5.0
+certifi==2025.8.3
+oauthlib==3.3.1
 PyJWT==2.10.1
 blinker==1.9.0
 
