--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   build_windows:
     name: Build Windows binary
-    runs-on: windows-latest
+    runs-on: windows-2022
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v5
