--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -39,7 +39,7 @@ jobs:
             os: macos-13
             python-version: "3.13"
           - name: Windows
-            os: windows-latest
+            os: windows-2022
             python-version: "3.13"
 
     steps:
