Prevent Renovate from updating GitHub Actions Windows runner

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -27,6 +27,11 @@
   ],
   "packageRules": [
     {
+      "matchManagers": ["github-actions"],
+      "matchPackageNames": ["windows"],
+      "enabled": false
+    },
+    {
       "matchPackagePatterns": [
         "*"
       ],
