Prevent renovate from updating macOS version
Due to #3131

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,7 +28,7 @@
   "packageRules": [
     {
       "matchManagers": ["github-actions"],
-      "matchPackageNames": ["windows"],
+      "matchPackageNames": ["windows", "macos"],
       "enabled": false
     },
     {
