--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,8 @@ notify2==0.3.1; sys_platform != 'win32' and sys_platform != 'darwin'
 requests==2.32.5
 requests-oauthlib==2.0.0
 PyYAML==6.0.3
-markdown==3.10
+markdown # Version-less for Python 3.9 and below
+markdown==3.10; python_version > '3.9'
 paho-mqtt==1.6.1 # Pinned, newer versions don't work with AppRise yet
 
 # Requests Requirements
